Tests/RunCMake/NinjaMultiConfig/SimpleNoCross-all-target-ninja-stderr.txt
^ninja: error: unknown target 'simplestatic:all'$
